--- a/maturaarbeit.tex
+++ b/maturaarbeit.tex
@@ -74,6 +74,10 @@ sorting=ynt
 ]{biblatex}
 \addbibresource{Bibliography.bib}
 
+% Macros
+\usepackage{mymacros}
+\usepackage{xargs}
+
 %======================================================================%
 %=== Angaben zum Dokument                                           ===%
 %======================================================================%
@@ -84,7 +88,7 @@ Rychenbergstrasse \hfill 8406 Winterthur\\
 8400 Winterthur}
 \subject{Matura Thesis}
 \title{An Exploration of Applied Reinforcement Learning}
-\author{\texorpdfstring{Kalani Fin Kistler \\[1cm]\includegraphics[scale=0.2]{figures/matlabgraph}\\[1cm] {\small Superviser: Elena Fattorini}}{Kalani Fin Kistler}}
+\author{\texorpdfstring{Kalani Fin Kistler \\[1cm]\includegraphics[scale=0.2]{figures/Screenshot from 2020-09-22 23-05-59.png}\\[1cm] {\small Supervisor: Elena Fattorini}}{Kalani Fin Kistler}}
 \date{\small xx.xx.20xx}
 %======================================================================%
 %=== PDF Dokumenteinstellungen                                      ===%
@@ -117,6 +121,10 @@ Rychenbergstrasse \hfill 8406 Winterthur\\
 \pagenumbering{arabic} % <- arabische Seitennummerierung
 
 % Kapitel einbinden:
+
+\chapter*{NOTES FOR CHAPTER HAND IN ONLY, NOT ON FINAL}
+Due to the fact taht I am not yet fammiliar with vectorgraphics and wanted to focus on writing, the figures are temporary stand ins, meant only to convey the content of the final image and not the final image itself.
+
 \input{chapters/introduction}
 \input{chapters/theory}
 
