chapter hand in first var

--- a/maturaarbeit.tex
+++ b/maturaarbeit.tex
@@ -50,6 +50,7 @@
 
 % Einfügen von Bildern
 \usepackage{graphicx}
+\usepackage{subfig}
 
 % schöne Tabellen
 \usepackage{booktabs}
@@ -106,6 +107,7 @@ Rychenbergstrasse \hfill 8406 Winterthur\\
 	linkcolor=black,%
 	urlcolor=black}%
 \makeatother
+\usepackage[bottom=80pt]{geometry}
 
 
 %======================================================================%
