--- a/maturaarbeit.tex
+++ b/maturaarbeit.tex
@@ -88,8 +88,8 @@ Fachschaft Mathematik \hfill Dättnauerstrasse 107\\
 Rychenbergstrasse \hfill 8406 Winterthur\\
 8400 Winterthur}
 \subject{Matura Thesis}
-\title{An Exploration of Applied Reinforcement Learning}
-\author{\texorpdfstring{Kalani Fin Kistler \\[1cm]\includegraphics[scale=0.2]{figures/Screenshot from 2020-09-22 23-05-59.png}\\[1cm] {\small Supervisor: Elena Fattorini}}{Kalani Fin Kistler}}
+\title{Ground Up Reinforcement Learning with Policy Gradient Methods using Unity}
+\author{\texorpdfstring{Kalani Fin Kistler \\[1cm]\includegraphics[scale=0.2]{figures/Screenshot from 2020-09-22 23-05-59.png}\\[1cm] {\small Supervisor: (Dr.?) Elena Fattorini}}{Kalani Fin Kistler}}
 \date{\small xx.xx.20xx}
 %======================================================================%
 %=== PDF Dokumenteinstellungen                                      ===%
@@ -126,10 +126,12 @@ Rychenbergstrasse \hfill 8406 Winterthur\\
 % Kapitel einbinden:
 
 \chapter*{NOTES FOR CHAPTER HAND IN ONLY, NOT ON FINAL}
-Due to the fact taht I am not yet fammiliar with vectorgraphics and wanted to focus on writing, the figures are temporary stand ins, meant only to convey the content of the final image and not the final image itself.
+Due to the fact that I am not yet familiar with vector graphics and wanted to focus on writing, the figures are temporary stand ins, meant only to convey the content of the final image, and are not the final images themselves.
 
 \input{chapters/introduction}
-\input{chapters/theory}
+\input{chapters/core_concepts}
+\input{chapters/policy_gradient}
+\input{chapters/neural_networks}
 
 \input{chapters/bibliography} 
 
