--- a/maturaarbeit.tex
+++ b/maturaarbeit.tex
@@ -48,7 +48,8 @@
 \ofoot[]{}
 \pagestyle{scrheadings}
 
-% Einfügen von Bildern
+% Einfügen von Bildern¨
+\usepackage{float}
 \usepackage{graphicx}
 \usepackage{subfig}
 
@@ -60,6 +61,9 @@
 \makeatletter                     % <- hebt Sonderbedeutung von @ auf
 \newcolumntype{d}[1]{D{.}{.}{#1}} % <- definiert einen neuen Spaltentyp
 \makeatother                      % <- setzt Sonderbedeutung von @ wieder
+
+% Algorithms
+\usepackage[ruled,vlined]{algorithm2e}
 
 % Beispieltext
 \usepackage{lipsum}
@@ -87,10 +91,12 @@ sorting=ynt
 Fachschaft Mathematik \hfill Dättnauerstrasse 107\\
 Rychenbergstrasse \hfill 8406 Winterthur\\
 8400 Winterthur}
-\subject{Matura Thesis}
-\title{Ground Up Reinforcement Learning with Policy Gradient Methods using Unity}
-\author{\texorpdfstring{Kalani Fin Kistler \\[1cm]\includegraphics[scale=0.2]{figures/Screenshot from 2020-09-22 23-05-59.png}\\[1cm] {\small Supervisor: (Dr.?) Elena Fattorini}}{Kalani Fin Kistler}}
-\date{\small xx.xx.20xx}
+\subject{Matura Thesis 20/21}
+\title{%
+    Machines Self Teaching Soccer \\
+  \large Reinforcement Learning using Policy Gradient Methods}
+\author{\texorpdfstring{Kalani Fin Kistler 4h \\[1cm]\includegraphics[scale=0.2]{figures/Screenshot from 2020-09-22 23-05-59.png}\\[1cm] {\small Supervisor: Elena Fattorini}}{Kalani Fin Kistler 4h}}
+\date{\small 04.01.2021}
 %======================================================================%
 %=== PDF Dokumenteinstellungen                                      ===%
 %======================================================================%
@@ -130,6 +136,7 @@ Due to the fact that I am not yet familiar with vector graphics and wanted to fo
 
 \input{chapters/introduction}
 \input{chapters/core_concepts}
+\input{chapters/gradient_descent}
 \input{chapters/policy_gradient}
 \input{chapters/neural_networks}
 
