--- a/mymacros.sty
+++ b/mymacros.sty
@@ -4,6 +4,7 @@
 \newcommand{\mathset}[1]{\mathscr{#1}}
 \newcommand{\citepg}[2][sutton_reinforcement_2018]{\cite[p. {#2}]{#1}}
 \newcommand{\ita}[1]{\textit{#1}}
+\newcommand{\nvec}[1]{\mathbf{#1}}
 \newcommandx{\image}[4][2= , 3= , 4=1]{
     \begin{minipage}{\linewidth}% to keep image and caption on one page
     \makebox[\linewidth]{%        to center the image
