--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -207,6 +207,15 @@
   urldate  = {2020-06-15},
 }
 
+@book{aggarwal_neural_2018,
+	address = {Cham},
+	title = {Neural networks and deep learning: a textbook},
+	isbn = {9783319944623 9783319944630},
+	shorttitle = {Neural networks and deep learning},
+	language = {eng},
+	publisher = {Springer},
+	author = {Aggarwal, Charu C.},
+	year = {2018},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
-
-
