--- a/maturaarbeit.tex
+++ b/maturaarbeit.tex
@@ -31,6 +31,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage[mathscr]{euscript}
+\usepackage{mathtools}
 
 % mathematische Buchstaben als Text
 \usepackage{textcomp}
@@ -65,6 +66,33 @@
 % Algorithms
 \usepackage[ruled,vlined]{algorithm2e}
 
+% code
+\usepackage{xcolor}
+\definecolor{bluekeywords}{rgb}{0.13,0.13,1}
+\definecolor{greencomments}{rgb}{0,0.5,0}
+\definecolor{redstrings}{rgb}{0.9,0,0}
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.5,0,1.0}
+
+\usepackage{listings}
+\lstset{language=[Sharp]C,
+showspaces=false,
+showtabs=false,
+breaklines=true,
+showstringspaces=false,
+breakatwhitespace=true,
+escapeinside={(*@}{@*)},
+commentstyle=\color{greencomments},
+keywordstyle=\color{bluekeywords}\bfseries,
+stringstyle=\color{redstrings},
+basicstyle=\ttfamily
+}
+
+%Color Boxes, proofs
+\usepackage{tikz,lipsum,lmodern}
+\usepackage[most]{tcolorbox}
+
 % Beispieltext
 \usepackage{lipsum}
 
@@ -77,7 +105,7 @@ backend=biber,
 style=numeric,
 sorting=ynt
 ]{biblatex}
-\addbibresource{Bibliography.bib}
+\addbibresource{mybib.bib}
 
 % Macros
 \usepackage{mymacros}
@@ -92,10 +120,8 @@ Fachschaft Mathematik \hfill Dättnauerstrasse 107\\
 Rychenbergstrasse \hfill 8406 Winterthur\\
 8400 Winterthur}
 \subject{Matura Thesis 20/21}
-\title{%
-    Machines Self Teaching Soccer \\
-  \large Reinforcement Learning using Policy Gradient Methods}
-\author{\texorpdfstring{Kalani Fin Kistler 4h \\[1cm]\includegraphics[scale=0.2]{figures/Screenshot from 2020-09-22 23-05-59.png}\\[1cm] {\small Supervisor: Elena Fattorini}}{Kalani Fin Kistler 4h}}
+\title{Policy Gradient Based Reinforcement Learning Applied to Playing Soccer}
+\author{\texorpdfstring{Kalani Fin Kistler, 4h \\[1cm]\includegraphics[scale=0.2]{figures/Screenshot from 2020-09-22 23-05-59.png}\\[1cm] {\small Supervisor: Elena Fattorini}}{Kalani Fin Kistler 4h}}
 \date{\small 04.01.2021}
 %======================================================================%
 %=== PDF Dokumenteinstellungen                                      ===%
@@ -111,7 +137,7 @@ Rychenbergstrasse \hfill 8406 Winterthur\\
 	citecolor=black,%
 	filecolor=black,%
 	linkcolor=black,%
-	urlcolor=black}%
+	urlcolor=black}
 \makeatother
 \usepackage[bottom=80pt]{geometry}
 
@@ -135,14 +161,14 @@ Rychenbergstrasse \hfill 8406 Winterthur\\
 Due to the fact that I am not yet familiar with vector graphics and wanted to focus on writing, the figures are temporary stand ins, meant only to convey the content of the final image, and are not the final images themselves.
 
 \input{chapters/introduction}
-\input{chapters/core_concepts}
-\input{chapters/gradient_descent}
-\input{chapters/policy_gradient}
-\input{chapters/neural_networks}
+\input{chapters/background}
+\input{chapters/implementation}
+\input{chapters/training}
+\input{chapters/conclusion}
+\input{chapters/bibliography}
 
-\input{chapters/bibliography} 
-
-\appendix 
+\appendix
 \listoffigures 
 \listoftables 
+\input{chapters/appendix}
 \end{document}
