--- a/maturaarbeit.tex
+++ b/maturaarbeit.tex
@@ -56,6 +56,7 @@
 
 % schöne Tabellen
 \usepackage{booktabs}
+\captionsetup[table]{font=small,skip=0pt}
 
 % Tabelleninhalt an Dezimalpunkt ausrichten
 \usepackage{dcolumn}
