--- a/mybib.bib
+++ b/mybib.bib
@@ -292,3 +292,20 @@
       archivePrefix={arXiv},
       primaryClass={cs.LG}
 }
+
+@misc{ramachandran2017searching,
+      title={Searching for Activation Functions}, 
+      author={Prajit Ramachandran and Barret Zoph and Quoc V. Le},
+      year={2017},
+      eprint={1710.05941},
+      archivePrefix={arXiv},
+      primaryClass={cs.NE}
+}
+
+@InProceedings{He_2015_ICCV,
+author = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+title = {Delving Deep into Rectifiers: Surpassing Human-Level Performance on ImageNet Classification},
+booktitle = {Proceedings of the IEEE International Conference on Computer Vision (ICCV)},
+month = {December},
+year = {2015}
+}
