Updates from Overleaf

--- a/maturaarbeit.tex
+++ b/maturaarbeit.tex
@@ -165,6 +165,7 @@ Due to the fact that I am not yet familiar with vector graphics and wanted to fo
 \input{chapters/background}
 \input{chapters/implementation}
 \input{chapters/training}
+\input{chapters/discussion}
 \input{chapters/conclusion}
 \input{chapters/bibliography}
 
