--- a/mybib.bib
+++ b/mybib.bib
@@ -309,3 +309,14 @@ booktitle = {Proceedings of the IEEE International Conference on Computer Vision
 month = {December},
 year = {2015}
 }
+
+@article{binomial_confidence,
+author = {Wallis, Sean},
+year = {2013},
+month = {07},
+pages = {},
+title = {Binomial Confidence Intervals and Contingency Tests: Mathematical Fundamentals and the Evaluation of Alternative Methods},
+volume = {20},
+journal = {Journal of Quantitative Linguistics},
+doi = {10.1080/09296174.2013.799918}
+}
